--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -50,14 +50,55 @@ metadata:
   name: db-init-config
 data:
   init.sql: |
+    CREATE TABLE IF NOT EXISTS users (
+        id SERIAL PRIMARY KEY,
+        email VARCHAR(255) UNIQUE NOT NULL,
+        password_hash VARCHAR(255) NOT NULL,
+        name VARCHAR(255),
+        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+        last_login TIMESTAMP
+    );
+
     CREATE TABLE IF NOT EXISTS reports (
         id SERIAL PRIMARY KEY,
         brand_name VARCHAR(255) NOT NULL,
         keywords JSONB NOT NULL,
         overall_score FLOAT NOT NULL,
         provider_analyses JSONB NOT NULL,
+        user_id INTEGER REFERENCES users(id) ON DELETE CASCADE,
         created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
     );
 
     CREATE INDEX idx_brand_name ON reports(brand_name);
     CREATE INDEX idx_created_at ON reports(created_at);
+    CREATE INDEX idx_reports_user_id ON reports(user_id);
+    CREATE INDEX idx_users_email ON users(email);
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: adminer
+  labels:
+    app: adminer
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: adminer
+  template:
+    metadata:
+      labels:
+        app: adminer
+    spec:
+      containers:
+      - name: adminer
+        image: adminer:latest
+        ports:
+        - containerPort: 8080
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "50m"
+          limits:
+            memory: "128Mi"
+            cpu: "100m"
