--- a/k8s/services.yaml
+++ b/k8s/services.yaml
@@ -2,63 +2,70 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-gateway
-  labels:
-    app: api-gateway
 spec:
   type: NodePort
+  selector:
+    app: api-gateway
   ports:
   - port: 3000
     targetPort: 3000
     nodePort: 30000
-    protocol: TCP
-    name: http
-  selector:
-    app: api-gateway
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: report-service
-  labels:
-    app: report-service
 spec:
-  type: ClusterIP
+  selector:
+    app: report-service
   ports:
   - port: 8080
     targetPort: 8080
-    protocol: TCP
-    name: http
-  selector:
-    app: report-service
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: llm-service
-  labels:
-    app: llm-service
 spec:
-  type: ClusterIP
+  selector:
+    app: llm-service
   ports:
   - port: 8081
     targetPort: 8081
-    protocol: TCP
-    name: http
-  selector:
-    app: llm-service
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: db
-  labels:
-    app: db
 spec:
-  type: ClusterIP
+  selector:
+    app: db
   ports:
   - port: 5432
     targetPort: 5432
-    protocol: TCP
-    name: postgres
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: adminer
+spec:
+  type: NodePort
   selector:
-    app: db
+    app: adminer
+  ports:
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30001
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+spec:
+  type: NodePort
+  selector:
+    app: frontend
+  ports:
+  - port: 3001
+    targetPort: 3001
+    nodePort: 30002
