--- a/.github/workflows/llm-service.yml
+++ b/.github/workflows/llm-service.yml
@@ -1,17 +1,19 @@
-name: Build and Push Docker Image
+name: Build and Push LLM Service
 
 on:
   push:
-    branches: [ master ]  # Trigger on push to master
+    branches: [ master ]
+    paths: [ 'llm-service/**' ]  # Only trigger on llm-service changes
   pull_request:
     branches: [ master ]
+    paths: [ 'llm-service/**' ]
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write 
+      packages: write
 
     steps:
     - name: Checkout code
@@ -19,17 +21,17 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
+
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Build and push Docker image
+
+    - name: Build and push LLM Service Docker image
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: ./llm-service
         push: true
-        tags: ghcr.io/geo-metrics-project/geo-metrics:latest  # Update repo
+        tags: ghcr.io/${{ github.repository }}/llm-service:latest
