--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -16,13 +16,13 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: frontend:latest
-        imagePullPolicy: Never
+        image: ghcr.io/geo-metrics-project/frontend:latest
+        imagePullPolicy: Always
         ports:
-        - containerPort: 3001
+        - containerPort: 3000
         env:
         - name: PORT
-          value: "3001"
+          value: "3000"
         - name: NEXT_PUBLIC_API_URL
           value: "http://api-gateway:3000"
         resources:
