--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -114,3 +114,27 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "100m"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: db
+spec:
+  selector:
+    app: db
+  ports:
+  - port: 5432
+    targetPort: 5432
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: adminer
+spec:
+  selector:
+    app: adminer
+  ports:
+  - port: 8080
+    targetPort: 8080
+  type: ClusterIP
