--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -16,15 +16,13 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ghcr.io/geo-metrics-project/frontend:latest
+        image: ghcr.io/geo-metrics-project/geo-metrics/frontend:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
         env:
         - name: PORT
           value: "3000"
-        - name: NEXT_PUBLIC_API_URL
-          value: "http://api-gateway:3000"
         resources:
           requests:
             memory: "128Mi"
@@ -32,3 +30,15 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+spec:
+  selector:
+    app: frontend
+  ports:
+  - port: 3000
+    targetPort: 3000
+  type: ClusterIP
