allowed manual triggering of actions

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,6 +1,7 @@
 name: Build and Push Frontend
 
 on:
+  workflow_dispatch:  # Allow manual triggering
   push:
     branches: [ master ]
     paths: [ 'frontend/**' ]  # Only trigger on frontend changes
