--- a/.github/workflows/llm-service.yml
+++ b/.github/workflows/llm-service.yml
@@ -1,6 +1,7 @@
 name: Build and Push LLM Service
 
 on:
+  workflow_dispatch:  # Allow manual triggering
   push:
     branches: [ master ]
     paths: [ 'llm-service/**' ]  # Only trigger on llm-service changes
