--- a/helm/values/values-postgres.yaml
+++ b/helm/values/values-postgres.yaml
@@ -42,6 +42,7 @@ primary:
         CREATE TABLE IF NOT EXISTS reports (
             id SERIAL PRIMARY KEY,
             brand_name VARCHAR(255) NOT NULL,
+            competitor_names TEXT[],
             user_id INTEGER,
             
             -- Flexible KPI storage (add/remove metrics without schema changes)
