report now stores owner email

--- a/helm/values/values-postgres.yaml
+++ b/helm/values/values-postgres.yaml
@@ -44,6 +44,7 @@ primary:
             brand_name VARCHAR(255) NOT NULL,
             competitor_names TEXT[],
             user_id VARCHAR(255) NOT NULL,  -- Kratos UUID
+            owner_email VARCHAR(255) NOT NULL,  -- Owner's email from Kratos
             
             -- Flexible KPI storage (add/remove metrics without schema changes)
             kpis JSONB DEFAULT '{}'::jsonb,
