--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ory/client": "^1.22.15",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
