--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -36,3 +36,5 @@ jobs:
         context: ./frontend
         push: true
         tags: ghcr.io/${{ github.repository }}/frontend:latest
+        build-args: |
+          NEXT_PUBLIC_KRATOS_URL=https://kratos.combaldieu.fr
