--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
+  namespace: geo-metrics
   labels:
     app: frontend
 spec:
@@ -49,6 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
+  namespace: geo-metrics
 spec:
   selector:
     app: frontend
