--- a/k8s/llm-service-deployment.yaml
+++ b/k8s/llm-service-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: llm-service
+  namespace: geo-metrics
   labels:
     app: llm-service
 spec:
@@ -54,6 +55,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: llm-service
+  namespace: geo-metrics
 spec:
   selector:
     app: llm-service
