--- a/k8s/report-service-deployment.yaml
+++ b/k8s/report-service-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: report-service
+  namespace: geo-metrics
   labels:
     app: report-service
 spec:
@@ -56,6 +57,8 @@ spec:
               key: password
         - name: LLM_SERVICE_URL
           value: "http://llm-service.geo-metrics.svc.cluster.local:8081"
+        - name: LIBRETRANSLATE_URL
+          value: "http://libretranslate.geo-metrics.svc.cluster.local:5000"
         - name: KRATOS_ADMIN_URL
           value: "http://kratos-admin.geo-ory.svc.cluster.local"
         - name: KETO_WRITE_URL
@@ -82,6 +85,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: report-service
+  namespace: geo-metrics
 spec:
   selector:
     app: report-service
