--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "lucide-react": "^0.562.0",
     "chart.js": "^4.5.1",
-    "next": "16.0.3",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.6",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
